<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLyt"
    tools:context=".MainActivity">

    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/gradient">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dashboardInfo"
                android:gravity="center"
                android:background="@drawable/border_1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp">

            <android.widget.Button
                android:id="@+id/mondayButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/monday"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="19sp"
                android:fontFamily="sans-serif" />

            <android.widget.Button
                android:id="@+id/thursdayButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thursday"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="19sp"
                android:fontFamily="sans-serif"
                android:layout_margin="5dp"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="85dp">

            <android.widget.Button
                android:id="@+id/tuesdayButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tuesday"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="19sp"
                android:fontFamily="sans-serif"
                android:layout_margin="5dp" />

            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fridayButton"
                android:text="@string/friday"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="19sp"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="85dp">

            <android.widget.Button
                android:id="@+id/wednesdayButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wednesday"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="19sp"
                android:fontFamily="sans-serif"/>

            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/saturdayButton"
                android:text="@string/saturday"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="19sp"
                android:fontFamily="sans-serif"
                android:layout_margin="5dp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.widget.Button
                android:layout_width="200dp"
                android:layout_height="72dp"
                android:id="@+id/sundayButton"
                android:text="@string/sunday"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                android:background="@drawable/background_gradient"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <TextView
            android:id="@+id/mealSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textStyle="normal"
            android:gravity="center"
            android:textSize="17sp" />

        <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1102973771475874/6965335197">
    </com.google.android.gms.ads.AdView>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>