<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".today_meal">

    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:id="@+id/textLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/todaysMealText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="8dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <android.widget.Button
                android:id="@+id/breakfastButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:fontFamily="sans-serif"
                android:text="@string/breakfast"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <android.widget.Button
                android:id="@+id/lunchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:fontFamily="sans-serif"
                android:text="@string/lunch"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <android.widget.Button
                android:id="@+id/supperButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_gradient"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/supper"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/keyLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notificationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tableLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="horizontal">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:baselineAligned="false"
                android:gravity="center"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#54D4FF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:background="@drawable/border_narrow"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/numberColumn"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/background_light" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/mealColumn"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/background_light" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingLeft="5dp"
                        android:paddingEnd="1dp"
                        android:paddingRight="1dp"
                        android:text="@string/nutritionColumn"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/background_light" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:background="@drawable/border_narrow"
                        android:gravity="center"
                        android:text="1"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/firstMealText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:hint="@string/cellOneHint"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/firstMealNutritionText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:background="@drawable/border_narrow"
                        android:gravity="center"
                        android:text="2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/secondMealText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/secondMealNutritionText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_narrow"
                        android:gravity="center"
                        android:text="3"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/thirdMealText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/thirdMealNutritionText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:background="@drawable/border_narrow"
                        android:gravity="center"
                        android:text="4"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/fourthMealText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/fourthMealNutritionText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:background="@drawable/border_narrow"
                        android:gravity="center"
                        android:text="5"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/fifthMealText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/fifthMealNutritionText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:background="@drawable/border_narrow"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informationalDetails"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1102973771475874/6965335197">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>